--- a/Mephist/Views/Employee/Details.cshtml
+++ b/Mephist/Views/Employee/Details.cshtml
@@ -4,42 +4,80 @@
     ViewData["Title"] = "Details";
 }
 
-
 <div>
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FullName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FullName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Institutions)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Institutions)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Department)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Department)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Subjects)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Subjects)
-        </dd>
-    </dl>
-</div>
-<div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
+    <div>
+        <div>
+            <img src="@Url.Action("GetAvatar",new { path = Model.Photos.First().GetPath() })" style="height: 200px; " />
+        </div>
+        <div>
+            Рейтинг
+        </div>
+    </div>
+    <div>
+        <h1>@Model.FullName</h1>
+        <table>
+            <tr>
+                <td>Преподаёт предметы:</td>
+                <td>
+                    @foreach (var subject in Model.Subjects.Split(';'))
+                    {
+                        <a href="#">@subject</a>
+                    }
+                </td>
+            </tr>
+            <tr>
+                <td>Преподаёт в институтах:</td>
+                <td>
+                    @foreach (var institue in Model.Institutions.Split(';'))
+                    {
+                        <a href="#">@institue</a>
+                    }
+                </td>
+            </tr>
+        </table>
+        <h1>Учебные материалы</h1>
+        <table>
+            <thead>
+                <tr>
+                    <td>Название</td>
+                    <td>Тип</td>
+                    <td>Предмет</td>
+                    <td>Описание</td>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var em in Model.EducationalMaterials)
+                {
+                    <tr>
+                        <td>@em.Name</td>
+                        <td>@em.Type</td>
+                        <td>Предмет</td>
+                        <td>@em.Description</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+        <h1>Отзывы</h1>
+        <form method="post">
+            <input type="text" /><br />
+            <input type="checkbox" />
+            <label>Анонимно</label>
+        </form>
+        @foreach (var review in Model.Reviews)
+        {
+            <div>
+                @if (review.Anonymously)
+                {
+                    <img src="@Url.Action("GetAvatar")" style="height: 200px; " />
+                }
+                else
+                {
+                    <h3>@review.User.NickName</h3>
+                    <img src="@Url.Action("GetAvatar",new { path = review.User.Photos.First().GetPath() })" style="height: 200px; " />
+                }
+            </div>
+            <p>@review.CreatedDate.ToShortDateString()</p>
+            <p>@review.Text</p>
+        }
+    </div>
 </div>
