--- a/Mephist/Views/Employee/Components/EmployeeProfile/SmallProfile.cshtml
+++ b/Mephist/Views/Employee/Components/EmployeeProfile/SmallProfile.cshtml
@@ -19,7 +19,7 @@
     <td>
         <a asp-controller="Employee" asp-action="Details" asp-route-id="@Model.Id">@Model.FullName</a>
         <br />
-        <img src="@Url.Action("GetAvatar",new { path = Model.Photos.First().GetPath() })" style="height: 100px; " />
+        <img src="@Url.Action("GetAvatar",new { employeeId = Model.Id})" style="height: 100px; " />
 
     </td>
     <td>
