--- a/Mephist/Views/Account/Login.cshtml
+++ b/Mephist/Views/Account/Login.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Login";
 }
 
-<h1>Login Popin</h1>
+<h1>Login</h1>
 <form method="post" asp-controller="Account" asp-action="Login">
     <div asp-validation-summary="ModelOnly"></div>
     <div>
