--- a/Mephist/Views/Account/Login.cshtml
+++ b/Mephist/Views/Account/Login.cshtml
@@ -8,13 +8,17 @@
     <div asp-validation-summary="ModelOnly"></div>
     <div>
         <label asp-for="Email"></label>
-        <input type="email" />
+        <input type="email" asp-for="Email"/>
         <span asp-validation-for="Email"></span>
     </div>
     <div>
         <label asp-for="Password"></label>
-        <input type="password" />
+        <input type="password" asp-for="Password"/>
         <span asp-validation-for="Password"></span>
+    </div>
+    <div>
+        <label asp-for="RememberMe"></label>
+        <input type="checkbox" asp-for="RememberMe" />
     </div>
     <div>
         <input type="submit" value="Войти" />
