--- a/Mephist/Views/Shared/_Layout.cshtml
+++ b/Mephist/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@inject Microsoft.AspNetCore.Identity.SignInManager<User> signInManager
+@inject Microsoft.AspNetCore.Identity.UserManager<User> userManager
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -7,50 +10,59 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="~/css/style.css" />
+    <link rel="stylesheet" href="~/css/jquery-ui.min.css" />
 </head>
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
-    <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
 
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-6 col-md-3 col-xl-4  d-block">
-                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">mephist</a></h1>
-                </div>
-                <div class="col-12 col-md-9 col-xl-8 main-menu">
-                    <nav class="site-navigation position-relative text-right" role="navigation">
-                        <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block ml-0 pl-0">
-                            <li><a href="#home-section" class="nav-link">Главная</a></li>
-                            <li><a asp-controller="Employee" asp-action="Index" class="nav-link">Сотрудники</a></li>
-                            <li>
-                                    <a class="nav-link dropdown-toggle"id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Учебные материалы
-                                    </a>
-                                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                        <a class="dropdown-item" asp-action="GetMaterials" asp-controller="EducationalMaterials">Все маетриалы</a>
-                                        <a class="dropdown-item" asp-action="GetLabJournals" asp-controller="EducationalMaterials">Лабаратораные работы</a>
-                                    </div>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-
-
-                <div class="col-6 col-md-9 d-inline-block d-lg-none ml-md-0"><a href="#" class="site-menu-toggle js-menu-toggle text-black float-right"><span class="icon-menu h3"></span></a></div>
-
-            </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light row">
+        <div class="col-6 col-md-3 col-xl-4  d-block">
+            <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">mephist</a></h1>
         </div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    </header>
+        <div class="col-6 col-md-3 col-xl-4 collapse navbar-collapse" id="navbarSupportedContent">
+
+            <ul class="navbar-nav mr-auto">
+                <li><a asp-controller="Employee" asp-action="Index" class="nav-link">Сотрудники</a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Учебные материалы
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" asp-action="GetMaterials" asp-controller="EducationalMaterials">Все маетриалы</a>
+                        <a class="dropdown-item" asp-action="GetLabJournals" asp-controller="EducationalMaterials">Лабаратораные работы</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="col-6 col-md-3 col-xl-4 float-right">
+            @if (signInManager.IsSignedIn(User))
+            {
+                <a class="col-12 col-md-6">@userManager.GetUserAsync(User).Result.UserName</a>
+                <form method="post" asp-controller="Account" asp-action="Logout">
+                    <input class="col-12 col-md-6" type="submit" value="Выйти" />
+                </form>
+            }
+            else
+            {
+                <a class="col-12 col-md-6" asp-controller="Account" asp-action="Login">Войти</a>
+                <a class="col-12 col-md-6" asp-controller="Account" asp-action="Register">Зарегистрироваться</a>
+            }
+        </div>
+    </nav>
     <div style="padding-top: 105px">
         @RenderBody()
     </div>
 
-   
+
 
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="~/js/jquery.js"></script>
+    <script src="~/js/jquery-ui.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
