--- a/Mephist/Views/EducationalMaterials/GetMaterials.cshtml
+++ b/Mephist/Views/EducationalMaterials/GetMaterials.cshtml
@@ -1,30 +1,51 @@
-﻿
+﻿@using Mephist.Models.Enums;
 @{
     ViewData["Title"] = "GetMaterials";
+   
 }
 
-<h1>GetMaterials</h1>
-<a asp-action="AddMaterial">Добавить</a>
-<table>
-    <thead>
-        <tr>
-            <td>Название</td>
-            <td>Тип</td>
-            <td>Преподаватель</td>
-            <td>Предмет</td>
-        </tr>
-    </thead>
-    <tbody>
-    @foreach(EducationalMaterial em in ViewBag.EducationalMaterialsList)
-    {
-        <tr>
-            <td>
-                <label>@em.Name</label>
-                <a asp-action="Download" asp-controller="EducationalMaterials" asp-route-id="@em.Id">Скачать</a>
-            </td>
-            <td>@em.Employee.FullName</td>
-            <td>@em.Subject</td>
-        </tr>
-    }
-    </tbody>
-</table>
+<div class="container"> 
+    <h1>Все учбенеы материалы</h1>
+
+    <h4><a asp-action="AddMaterial">Добавить</a></h4>
+    <table class="table">
+        <thead>
+            <tr>
+                <td scope="col">Название</td>
+                <td scope="col">Предмет</td>
+                <td scope="col">Тип</td>
+                <td scope="col">Преподаватель</td>
+                <td scope="col">Описание</td>
+            </tr>
+        </thead>
+        <tbody class="table-striped">
+            @foreach (EducationalMaterial em in ViewBag.EducationalMaterialsList)
+            {
+                <tr>
+                    <td>
+                        <label>@em.Name</label>
+                        <a asp-action="Download" asp-controller="EducationalMaterials" asp-route-id="@em.Id">Скачать</a>
+                    </td>
+                    <td>@em.Subject</td>
+                    <td>
+                        @{
+                            var type = em.Type switch
+                            {
+                                EducationMaterialType.ExamTickets => "Билеты",
+                                EducationMaterialType.Homework => "Домашнее задание",
+                                EducationMaterialType.LaboratoryJournal => "Лабораторная работа",
+                                EducationMaterialType.Lectures => "Лекции",
+                                EducationMaterialType.Other => "Другое",
+                                EducationMaterialType.Spurs => "Шпоры",
+                                EducationMaterialType.TermPaper => "Курсовая работа",
+                            };
+                        }
+                        @type
+                    </td>
+                    <td>@em.Employee.FullName</td>
+                    <td>@em.Description</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
