--- a/Mephist/Views/Shared/Components/PageNavigation/Default.cshtml
+++ b/Mephist/Views/Shared/Components/PageNavigation/Default.cshtml
@@ -14,7 +14,6 @@
             <li class="page-item disabled">
                 <a class="page-link" href="#" aria-label="Previous">
                     <span aria-hidden="true">&laquo;</span>
-                    <span class="sr-only">Previous</span>
                 </a>
             </li>
         }
@@ -22,8 +21,7 @@
         {
             <li class="page-item">
                 <a class="page-link" asp-action="@ViewBag.Action" asp-controller="@ViewBag.Controller" asp-route-page="@prevPage " aria-label="Previous">
-<span aria-hidden="true">&laquo;</span>
-                    <span class="sr-only">Previous</span>
+                <span aria-hidden="true">&laquo;</span>
                 </a>
             </li>
         }
@@ -32,7 +30,7 @@
             if (i == ViewBag.Page)
             {
                 <li class="page-item active disabled">
-                    <a class="page-link" asp-action="@ViewBag.Action" asp-controller="@ViewBag.Controller" asp-route-page="@i">@i<span class="sr-only">(current)</span></a>
+                    <a class="page-link" asp-action="@ViewBag.Action" asp-controller="@ViewBag.Controller" asp-route-page="@i">@i</a>
                 </li>
             }
             else
@@ -47,7 +45,6 @@
             <li class="page-item disabled">
                 <a class="page-link" href="#" aria-label="Next">
                     <span aria-hidden="true">&raquo;</span>
-                    <span class="sr-only">Next</span>
                 </a>
             </li>
         }
@@ -56,7 +53,6 @@
             <li class="page-item">
                 <a class="page-link" asp-action="@ViewBag.Action" asp-controller="@ViewBag.Controller" asp-route-page="@nextPage" aria-label="Next">
                     <span aria-hidden="true">&raquo;</span>
-                    <span class="sr-only">Next</span>
                 </a>
             </li>
         }
