--- a/Mephist/Views/Shared/_Layout.cshtml
+++ b/Mephist/Views/Shared/_Layout.cshtml
@@ -7,9 +7,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Mephist</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-CuOF+2SnTUfTwSZjCXf01h7uYhfOBuxIhGKPbfEJ3+FqH/s6cIFN9bGr1HmAg4fQ" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="~/css/style.css" />
     <link rel="stylesheet" href="~/css/jquery-ui.min.css" />
 </head>
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="0">
@@ -33,6 +32,9 @@
                         <a class="dropdown-item" asp-action="GetLabJournals" asp-controller="EducationalMaterials">Лабаратораные работы</a>
                     </div>
                 </li>
+                <li class="nav-item"><a href="#" class="nav-link">Кафедры</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Расписание</a></li>
+
             </ul>
 
             @if (signInManager.IsSignedIn(User))
@@ -65,9 +67,8 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="~/js/jquery.js"></script>
     <script src="~/js/jquery-ui.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-t6I8D5dJmMXjCsRLhSzCltuhNZg6P10kE0m0nAncLUjH6GeYLhRU1zfLoW3QNQDF" crossorigin="anonymous"></script>
     @RenderSection("scripts", false)
 </body>
 </html>
