--- a/Mephist/Views/Employee/Index.cshtml
+++ b/Mephist/Views/Employee/Index.cshtml
@@ -10,7 +10,7 @@
 <form method="get" asp-action="Index">
     <div class="input-group mb-2" style="font-size: 28px; height: 1.5em;">
         <button class="btn btn-outline-primary" type="submit">Найти</button>
-        <input type="text" class="form-control" name="search">
+        <input type="text" class="form-control" name="search" value="@(ViewBag.Search ?? "")">
     </div>
 </form>
 <div class="container justify-content-center">
